syntax = "proto3";

option go_package = ".";

// import "user.proto";

service UserService {
  rpc CreateOwner(Owner) returns (GetOwnerRequest);
  rpc GetOwner(GetOwnerRequest) returns (Owner);
  rpc UpdateOwner(Owner) returns (Owner);
  rpc DeleteOwner(GetOwnerRequest) returns (DeletedOwner);
  rpc ListOwner(GetAllOwnerRequest) returns (GetAllOwnerResponse);
}

message Owner {
  string id = 1;
  string full_name = 2;
  string company_name = 3;
  string email = 4;
  string password = 5;
  string avatar = 6;
  string tax = 7;
  string created_at = 8;
  string updated_at = 9;
}

message Worker {
  string id = 1;
  string full_name = 2;
  string login_key = 3;
  string password = 5;
  string owner_id = 6;
  string created_at = 7;
  string updated_at = 8;
}

message Geolocation {
  int64 id = 1;
  float latitude = 2;
  float longitude = 3;
  string owner_id = 4;
}

message GetOwnerRequest {
  string id = 1;
}

message GetWorkerRequest {
  string id = 1;
}

message GetGeolocationRequest {
  string owner_id = 1;
}

message DeletedOwner {
  string status_message = 1;
}

message DeletedWorker {
  string status_message = 1;
}

message DeletedGeolocation {
  string status_message = 1;
}

message GetAllOwnerRequest {
  int64 page = 1;
  int64 limit = 2;
}

message GetAllWorkerRequest {
  int64 page = 1;
  int64 limit = 2;
}

message GetAllGeolocationRequest {
  string owner_id = 1;
}

message GetAllOwnerResponse {
  repeated Owner all_owners = 1;
}

message GetAllWorkerResponse {
  repeated Worker all_workers = 1;
}

message GetAllGeolocationResponse {
  repeated Geolocation all_geolocations = 1;
}
